chore: update mobbin logo

--- a/apps/www/_case-studies/replenysh.mdx
+++ b/apps/www/_case-studies/replenysh.mdx
@@ -1,5 +1,5 @@
 ---
-title: Replenysh uses Supabase to implement OTP in less than 24 hours
+title: Replenysh uses Supabase to implement OTP in less than 24 hours.
 description: With Supabase, Replenysh gets a slick auth experience, reduces DevOps overhead, and continues to scale with Postgres.
 author: rory_wilding
 author_title: Supabase
