--- a/apps/docs/pages/guides/database/extensions.mdx
+++ b/apps/docs/pages/guides/database/extensions.mdx
@@ -40,14 +40,18 @@ drop
 Even though the SQL code is `create extension`, this is the equivalent of "enabling the extension".
 To disable an extension call `drop extension`.
 
-<Admonition type="caution">
-
-Enabling some extensions with `create extension <extension-name> with schema extensions` may lead to permission issues (e.g., `dblink`, `http`, `pg_cron`).
-
-</Admonition>
-
 </TabPanel>
 </Tabs>
+
+<Admonition type="note">
+
+Most extensions are installed under the `extensions` schema. This schema is accessible to public by default.
+
+If you need to restrict user access to certain extensions, it is recommended to create a separate schema for installing that specific extension.
+
+Some extensions like postgis must be created under a predefined schema. If you are missing access privileges from the dashboard, please file a support ticket.
+
+</Admonition>
 
 ### Full list of extensions
 
